# ChangeLog for mail-client/clawsker
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/clawsker/ChangeLog,v 1.17 2010/11/22 13:53:51 fauli Exp $

  22 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  -clawsker-0.7.0.ebuild, -clawsker-0.7.1.ebuild:
  clean up

  07 Aug 2010; Markos Chandras <hwoarang@gentoo.org> clawsker-0.7.2.ebuild:
  Stable on amd64 wrt bug #331395

  06 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  clawsker-0.7.2.ebuild:
  stable x86, bug 331395

*clawsker-0.7.2 (03 Jul 2010)

  03 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  +clawsker-0.7.2.ebuild:
  version bump

*clawsker-0.7.1 (12 Jun 2010)

  12 Jun 2010; Christian Faulhammer <fauli@gentoo.org> +clawsker-0.7.1.ebuild:
  version bump

  26 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  -clawsker-0.6.0.ebuild:
  clean up

  01 Aug 2009; Jeremy Olexa <darkside@gentoo.org> clawsker-0.7.0.ebuild:
  amd64 stable, bug 278682

  24 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  clawsker-0.7.0.ebuild:
  stable x86, bug 278682

*clawsker-0.7.0 (07 Jul 2009)

  07 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  +clawsker-0.7.0.ebuild:
  version bump

  22 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  -clawsker-0.5.0.ebuild:
  clean up

  18 Apr 2009; Markus Meier <maekke@gentoo.org> clawsker-0.6.0:
  amd64/x86 stable, bug #265105

*clawsker-0.6.0 (06 Mar 2009)

  06 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  +clawsker-0.6.0.ebuild:
  version bump

  28 Nov 2008; Markus Meier <maekke@gentoo.org> clawsker-0.5.0.ebuild:
  amd64/x86 stable, bug #248760

  28 Nov 2008; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  Change my email address

  24 Oct 2008; Markus Meier <maekke@gentoo.org> clawsker-0.5.0.ebuild:
  add ~amd64, bug #242406

*clawsker-0.5.0 (16 Oct 2008)

  16 Oct 2008; Christian Faulhammer <opfer@gentoo.org> +metadata.xml,
  +clawsker-0.5.0.ebuild: