@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/clawsker
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/clawsker/ChangeLog,v 1.17 2010/11/22 13:53:51 fauli Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-client/clawsker/ChangeLog,v 1.18 2011/04/13 19:31:04 fauli Exp $
+
+*clawsker-0.7.5 (13 Apr 2011)
+
+  13 Apr 2011; Christian Faulhammer <fauli@gentoo.org>
+  +clawsker-0.7.5.ebuild:
+  version bump
 
   22 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
   -clawsker-0.7.0.ebuild, -clawsker-0.7.1.ebuild:
